--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@highcharts/map-collection": "^2.3.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -45,14 +46,21 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "highcharts": "^12.2.0",
+    "highcharts-react-official": "^3.2.2",
     "input-otp": "1.4.1",
+    "install": "^0.13.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
-    "react": "^19",
+    "npm": "^11.3.0",
+    "proj4": "^2.15.0",
+    "react": "19.0.0-rc.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "19.0.0-rc.1",
     "react-hook-form": "^7.54.1",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
@@ -64,6 +72,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
