--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "next-themes": "latest",
     "npm": "^11.3.0",
     "proj4": "^2.15.0",
-    "react": "19.0.0-rc.1",
+    "react": "19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc.1",
     "react-hook-form": "^7.54.1",
