--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "^5.75.5",
+    "@turf/turf": "^7.2.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,7 @@
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
+    "maplibre-gl": "^5.6.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "npm": "^11.3.0",
@@ -63,21 +65,26 @@
     "react-dom": "19.0.0-rc.1",
     "react-hook-form": "^7.54.1",
     "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.0.4",
     "react-resizable-panels": "^2.1.7",
+    "react-simple-maps": "^3.0.0",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "turf": "^3.0.14",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-simple-maps": "^3.0.6",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "postcss": "^8",
